# mt940-py

./: .gitignore  README.md  build_exe.py  pyproject.toml  release.sh
.github/workflows/: release.yml
src/mt940_py/: converter.py  exporter.py  gui.py  main.py  validator.py
tests/: test_converter.py  test_validator.py
