[project]
name = "mt940-py"
version = "0.1.2"
description = "Narzędzie do walidacji i konwersji wyciągów bankowych do formatu MT940 (wariant ZBP)."
authors = [
    { name = "TheUndefined", email = "undefine@aramin.net" }
]
dependencies = [
    "mt-940>=4.30.0",
]
requires-python = ">=3.12"

[project.scripts]
mt940-val = "mt940_py.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
